cmake_minimum_required(VERSION 3.25)
project(untitled_folder)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled_folder main.cpp AddRecruitmentUI.cpp CompanyMember.cpp GeneralMember.cpp ManageRecruitment.cpp Member.cpp Recruitment.cpp ShowRecruitmentUI.cpp SignOut.cpp SignOutUI.cpp SignIn.h SignIn.cpp SignUp.h SignUp.cpp WithDrawal.h WithDrawal.cpp SignUpUI.h SignUpUI.cpp SignInUI.h SignInUI.cpp WithDrawalUI.h WithDrawalUI.cpp SearchEmploymentUI.h SearchEmploymentUI.cpp Apply.cpp SearchEmployment.cpp)
